--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,29 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="description" content="Digital artist, interactive designer, photographer, pixel artist, indie game developer.">
+    <title>codename: rathaus</title>
+    <link rel="stylesheet" href="app/css/normalize.css">
+    <link rel="stylesheet" href="app/css/main.css">
+	<script type="text/javascript" src="app/engine/engine.js"></script>
+	<script type="text/javascript" src="app/main.js"></script>
+</head>
+<body>
+	<header>
+		<h1>RATHAUS</h1>
+		<p>Game about the magnificent rat and his journey in the office life.</p>
+	</header>
+	
+	<article class="viewport">
+		<div id="game">..the game..</div>
+	</article>
+
+	<footer>
+		<p><small>&copy;2014 P1X GAMES</small></p>
+	</footer>
+</body>
+</html>
