--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,14 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="Digital artist, interactive designer, photographer, pixel artist, indie game developer.">
+    
     <title>codename: rathaus</title>
+    
     <link rel="stylesheet" href="app/css/normalize.css">
     <link rel="stylesheet" href="app/css/main.css">
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="app/engine/maps.js"></script>
 	<script type="text/javascript" src="app/engine/engine.js"></script>
 	<script type="text/javascript" src="app/main.js"></script>
 </head>
@@ -20,6 +25,7 @@
 	
 	<article class="viewport">
 		<div id="game">..the game..</div>
+		<canvas id="minimap"></canvas>
 	</article>
 
 	<footer>
