--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
 	
 	<article class="viewport">
 		<div id="game">..the game..</div>
-		<div class="minimap"><canvas id="minimap"></canvas></div>
+		<div id="minimap"></div>
 	</article>
 
 	<footer>
