--- a/web/index.html
+++ b/web/index.html
@@ -11,25 +11,21 @@
     
     <link rel="stylesheet" href="app/css/normalize.css">
     <link rel="stylesheet" href="app/css/main.css">
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript" src="app/engine/maps.js"></script>
-	<script type="text/javascript" src="app/engine/engine.js"></script>
-	<script type="text/javascript" src="app/main.js"></script>
 </head>
 <body>
-	<header>
-		<h1>RATHAUS</h1>
-		<p>Game about the magnificent rat and his journey in the office life.</p>
-	</header>
-	
-	<article class="viewport">
+	<section class="viewport">
 		<div id="game">..the game..</div>
-		<div id="minimap"></div>
-	</article>
+	</section>
 
 	<footer>
 		<p><small>&copy;2014 P1X GAMES</small></p>
 	</footer>
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="app/engine/maps.js"></script>
+    <script type="text/javascript" src="app/engine/player.js"></script>
+	<script type="text/javascript" src="app/engine/engine.js"></script>
+	<script type="text/javascript" src="app/main.js"></script>
+
 </body>
 </html>
