Added dictionary api to main page

--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="Digital artist, interactive designer, photographer, pixel artist, indie game developer.">
-    
+
     <title>codename: rathaus</title>
-    
+
     <link rel="stylesheet" href="app/css/normalize.css">
     <link rel="stylesheet" href="app/css/main.css">
 </head>
@@ -21,11 +21,12 @@
 		<p><small>&copy;2014 P1X GAMES</small></p>
 	</footer>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="app/API/dictionary.js"></script>
     <script type="text/javascript" src="app/engine/maps.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
-	<script type="text/javascript" src="app/engine/engine.js"></script>
-	<script type="text/javascript" src="app/main.js"></script>
+    <script type="text/javascript" src="app/engine/engine.js"></script>
+    <script type="text/javascript" src="app/main.js"></script>
 
 </body>
 </html>
