--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,7 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="app/API/dictionary.js"></script>
+    <script type="text/javascript" src="app/API/images.js"></script>
     <script type="text/javascript" src="app/engine/maps.js"></script>
     <script type="text/javascript" src="app/engine/minimap.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
