--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="app/engine/maps.js"></script>
     <script type="text/javascript" src="app/engine/minimap.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
-    <script type="text/javascript" src="app/engine/engine.js"></script>
+    <script type="text/javascript" src="app/engine/render.js"></script>
     <script type="text/javascript" src="app/main.js"></script>
 
 </body>
