--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,10 @@
 </head>
 <body>
     <section class="viewport">
-        <div id="game">..the game..</div>
+        <div id="screen">
+            <div id="floor"></div>
+            <div id="ceiling"></div>
+        </div>
     </section>
 
     <footer>
