--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
     </section>
 
     <footer>
-        <p><small>&copy;2014 P1X GAMES</small></p>
+        <p>RATHAUS <small>&copy;2014 P1X GAMES</small></p>
     </footer>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
