Added more items

--- a/web/index.html
+++ b/web/index.html
@@ -20,11 +20,25 @@
         </div>
     </section>
 
+    <footer>
+        <p><small>&copy;2014 P1X GAMES</small></p>
+    </footer>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="app/API/dictionary.js"></script>
     <script type="text/javascript" src="app/API/images.js"></script>
     <script type="text/javascript" src="app/engine/items/item.js"></script>
     <script type="text/javascript" src="app/engine/items/apple.js"></script>
+    <script type="text/javascript" src="app/engine/items/bottle.js"></script>
+    <script type="text/javascript" src="app/engine/items/cake.js"></script>
+    <script type="text/javascript" src="app/engine/items/chair.js"></script>
+    <script type="text/javascript" src="app/engine/items/cheese.js"></script>
+    <script type="text/javascript" src="app/engine/items/flower.js"></script>
+    <script type="text/javascript" src="app/engine/items/item.js"></script>
+    <script type="text/javascript" src="app/engine/items/mug.js"></script>
+    <script type="text/javascript" src="app/engine/items/pear.js"></script>
+    <script type="text/javascript" src="app/engine/items/table.js"></script>
+    <script type="text/javascript" src="app/engine/items/vase.js"></script>
     <script type="text/javascript" src="app/engine/maps.js"></script>
     <script type="text/javascript" src="app/engine/minimap.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
