--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="app/engine/minimap.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
     <script type="text/javascript" src="app/engine/render.js"></script>
+    <script type="text/javascript" src="app/engine/enemies.js"></script>
     <script type="text/javascript" src="app/main.js"></script>
 
 </body>
