--- a/web/index.html
+++ b/web/index.html
@@ -20,9 +20,14 @@
         </div>
     </section>
 
+    <footer>
+        <p><small>&copy;2014 P1X GAMES</small></p>
+    </footer>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="app/API/dictionary.js"></script>
     <script type="text/javascript" src="app/API/images.js"></script>
+    <script type="text/javascript" src="app/engine/items.js"></script>
     <script type="text/javascript" src="app/engine/items/item.js"></script>
     <script type="text/javascript" src="app/engine/items/apple.js"></script>
     <script type="text/javascript" src="app/engine/items/bottle.js"></script>
