Added item pickup

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,11 @@
             <div id="ceiling"></div>
         </div>
     </section>
-    
+
+    <footer>
+        <p><small>&copy;2014 P1X GAMES</small></p>
+    </footer>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="app/API/dictionary.js"></script>
     <script type="text/javascript" src="app/API/images.js"></script>
@@ -37,6 +41,7 @@
     <script type="text/javascript" src="app/engine/items/vase.js"></script>
     <script type="text/javascript" src="app/engine/maps.js"></script>
     <script type="text/javascript" src="app/engine/minimap.js"></script>
+    <script type="text/javascript" src="app/engine/hud.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
     <script type="text/javascript" src="app/engine/render.js"></script>
     <script type="text/javascript" src="app/engine/enemies.js"></script>
