--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
             <div id="floor"></div>
             <div id="ceiling"></div>
         </div>
+        <div id="description"></div>
     </section>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
