--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
             <div id="ceiling"></div>
         </div>
     <div id="description"></div>
+    <div id="blood"></div>
     </section>
 
 
