--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,15 @@
     <script type="text/javascript" src="app/engine/player.js"></script>
     <script type="text/javascript" src="app/engine/render.js"></script>
     <script type="text/javascript" src="app/engine/enemies.js"></script>
+    <script type="text/javascript" src="app/engine/enemies/enemyEntity.js"></script>
+    <script type="text/javascript" src="app/engine/enemies/actions/goUp.js"></script>
+    <script type="text/javascript" src="app/engine/enemies/actions/goDown.js"></script>
+    <script type="text/javascript" src="app/engine/enemies/actions/goRight.js"></script>
+    <script type="text/javascript" src="app/engine/enemies/actions/goLeft.js"></script>
+    <script type="text/javascript" src="app/engine/enemies/actions/idle.js"></script>
+    <script type="text/javascript" src="app/engine/enemies/actions/follow.js"></script>
+    <script type="text/javascript" src="app/engine/enemies/actions/probability.js"></script>
+    <script type="text/javascript" src="app/engine/enemies/npcAi.js"></script>
     <script type="text/javascript" src="app/main.js"></script>
 
 </body>
