--- a/web/index.html
+++ b/web/index.html
@@ -40,10 +40,10 @@
     <script type="text/javascript" src="app/engine/maps.js"></script>
     <script type="text/javascript" src="app/engine/minimap.js"></script>
     <script type="text/javascript" src="app/engine/hud.js"></script>
+    <script type="text/javascript" src="app/engine/collision.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
     <script type="text/javascript" src="app/engine/render.js"></script>
     <script type="text/javascript" src="app/engine/enemies.js"></script>
-    <script type="text/javascript" src="app/engine/enemies/enemyEntity.js"></script>
     <script type="text/javascript" src="app/engine/enemies/actions/goUp.js"></script>
     <script type="text/javascript" src="app/engine/enemies/actions/goDown.js"></script>
     <script type="text/javascript" src="app/engine/enemies/actions/goRight.js"></script>
