audio - noir version

--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,7 @@
     <script type="text/javascript" src="app/engine/minimap.js"></script>
     <script type="text/javascript" src="app/engine/hud.js"></script>
     <script type="text/javascript" src="app/engine/collision.js"></script>
+    <script type="text/javascript" src="app/engine/sounds.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
     <script type="text/javascript" src="app/engine/render.js"></script>
     <script type="text/javascript" src="app/engine/enemies.js"></script>
