Added new items

--- a/web/index.html
+++ b/web/index.html
@@ -32,13 +32,23 @@
     <script type="text/javascript" src="app/engine/items.js"></script>
     <script type="text/javascript" src="app/engine/items/item.js"></script>
     <script type="text/javascript" src="app/engine/items/apple.js"></script>
+    <script type="text/javascript" src="app/engine/items/backpack.js"></script>
+    <script type="text/javascript" src="app/engine/items/banana.js"></script>
     <script type="text/javascript" src="app/engine/items/bottle.js"></script>
+    <script type="text/javascript" src="app/engine/items/bread.js"></script>
     <script type="text/javascript" src="app/engine/items/cake.js"></script>
     <script type="text/javascript" src="app/engine/items/chair.js"></script>
     <script type="text/javascript" src="app/engine/items/cheese.js"></script>
     <script type="text/javascript" src="app/engine/items/flower.js"></script>
+    <script type="text/javascript" src="app/engine/items/key.js"></script>
     <script type="text/javascript" src="app/engine/items/mug.js"></script>
+    <script type="text/javascript" src="app/engine/items/notebook.js"></script>
+    <script type="text/javascript" src="app/engine/items/orange.js"></script>
     <script type="text/javascript" src="app/engine/items/pear.js"></script>
+    <script type="text/javascript" src="app/engine/items/phone.js"></script>
+    <script type="text/javascript" src="app/engine/items/plate.js"></script>
+    <script type="text/javascript" src="app/engine/items/shoes.js"></script>
+    <script type="text/javascript" src="app/engine/items/spoon.js"></script>
     <script type="text/javascript" src="app/engine/items/table.js"></script>
     <script type="text/javascript" src="app/engine/items/vase.js"></script>
 
@@ -48,7 +58,7 @@
     <script type="text/javascript" src="app/engine/collision.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
     <script type="text/javascript" src="app/engine/render.js"></script>
-    
+
     <script type="text/javascript" src="app/engine/enemies.js"></script>
     <script type="text/javascript" src="app/engine/enemies/actions/goUp.js"></script>
     <script type="text/javascript" src="app/engine/enemies/actions/goDown.js"></script>
