--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="Digital artist, interactive designer, photographer, pixel artist, indie game developer.">
 
-    <title>codename: rathaus</title>
+    <title>RatHaus 3-D</title>
 
     <link rel="stylesheet" href="app/css/normalize.css">
     <link rel="stylesheet" href="app/css/main.css">
@@ -20,6 +20,17 @@
         </div>
     <div id="description"></div>
     <div id="blood"></div>
+    <div id="menu">
+        <h1><img src="media/images/logo.png" alt="RatHaus 3-D"/></h1>
+        <h2 class="blink">PRESS ENTER TO START GAME</h2>
+        <ul>
+            <li>Paweł Weremczuk
+            <li>Krzysztof Jankowski
+            <li>Krzysztof Tomiak
+            <li>Wojciech Chojnacki
+        </ul>
+        <p>&copy;2014</p>
+    </div>
     </section>
 
 
