--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Digital artist, interactive designer, photographer, pixel artist, indie game developer.">
 
     <title>RatHaus 3-D</title>
-
+    <link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="app/css/normalize.css">
     <link rel="stylesheet" href="app/css/main.css">
 </head>
