--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
             <div id="floor"></div>
             <div id="ceiling"></div>
         </div>
+    <div id="rat"></div>
     <div id="description"></div>
     <div id="blood"></div>
     <div id="menu">
