--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,11 @@
     <section class="viewport">
         <div id="screen">
             <div id="floor"></div>
-            <div id="ceiling"></div>
+            <div id="ceiling">
+                <div class="clouds_one"></div>
+                <div class="clouds_two"></div>
+                <div class="clouds_three"></div>
+            </div>
         </div>
     <div id="rat"></div>
     <div id="description"></div>
