--- a/web/index.html
+++ b/web/index.html
@@ -20,21 +20,17 @@
                 <div class="clouds_one"></div>
                 <div class="clouds_two"></div>
                 <div class="clouds_three"></div>
+                <div class="sun"></div>
             </div>
         </div>
     <div id="rat"></div>
     <div id="description"></div>
     <div id="blood"></div>
     <div id="menu">
-        <h1><img src="media/images/logo.png" alt="RatHaus 3-D"/></h1>
+        <h1><img src="media/images/logo.png" alt="Gardening Simulator"/></h1>
         <h2 class="blink">PRESS ENTER TO START GAME</h2>
-        <ul>
-            <li>Paweł Weremczuk
-            <li>Krzysztof Jankowski
-            <li>Krzysztof Tomiak
-            <li>Wojciech Chojnacki
-        </ul>
-        <p>&copy;2014</p>
+        <p></p>
+        <p>&copy;2014 P1X Games</p>
     </div>
     </section>
 
@@ -69,7 +65,6 @@
     <script type="text/javascript" src="app/engine/items/vase.js"></script>
 
     <script type="text/javascript" src="app/engine/maps.js"></script>
-    <script type="text/javascript" src="app/engine/minimap.js"></script>
     <script type="text/javascript" src="app/engine/hud.js"></script>
     <script type="text/javascript" src="app/engine/collision.js"></script>
     <script type="text/javascript" src="app/engine/player.js"></script>
@@ -85,16 +80,5 @@
     <script type="text/javascript" src="app/engine/enemies/actions/probability.js"></script>
     <script type="text/javascript" src="app/engine/enemies/npcAi.js"></script>
     <script type="text/javascript" src="app/main.js"></script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-44113815-2', 'p1x.in');
-      ga('send', 'pageview');
-
-    </script>
 </body>
 </html>
