--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="Digital artist, interactive designer, photographer, pixel artist, indie game developer.">
 
-    <title>RatHaus 3-D</title>
+    <title>Gardening Simulator 3-D</title>
     <link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="app/css/normalize.css">
     <link rel="stylesheet" href="app/css/main.css">
@@ -17,20 +17,19 @@
         <div id="screen">
             <div id="floor"></div>
             <div id="ceiling">
+                <img src="media/images/skybox.png" class="skybox"/>
                 <div class="clouds_one"></div>
                 <div class="clouds_two"></div>
                 <div class="clouds_three"></div>
                 <div class="sun"></div>
             </div>
         </div>
-    <div id="rat"></div>
     <div id="description"></div>
-    <div id="blood"></div>
     <div id="menu">
         <h1><img src="media/images/logo.png" alt="Gardening Simulator"/></h1>
-        <h2 class="blink">PRESS ENTER TO START GAME</h2>
-        <p></p>
-        <p>&copy;2014 P1X Games</p>
+        <h2 class="blink">Press [enter] to enter the garden</h2>
+        <p>TECH DEMO - version pre-alpha<br/>
+        &copy;2014 P1X Games</p>
     </div>
     </section>
 
